fix z-index

--- a/website/app/globals.css
+++ b/website/app/globals.css
@@ -47,4 +47,7 @@ section {
   border: 1px solid black;
   padding: 1em;
   color: white;
+
+  position: relative;
+  z-index: 20;
 }
